=== 0.0.4 / 2009-11-30

* 1 minor enhancement

  * Added label creation

=== 0.0.3 / 2009-11-19

* 1 minor enhancement

  * Fixed MIME::Message#content= for messages without an encoding
  * Added Gmail#new_message

=== 0.0.2 / 2009-11-18

* 1 minor enhancement

  * Made all of the examples in the README possible.

=== 0.0.1 / 2009-11-18

* 1 major enhancement

  * Birthday!
